--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # URL to where the Revolt app is publicly accessible
+# 修改下方的local.revolt.chat为你服务器的IP或者域名
 REVOLT_APP_URL=http://local.revolt.chat:5000
 
 # URL to where the API is publicly accessible
